--- a/notebooks/01 - Fundamentos de Processamento de Imagens/03-Operacoes_Pontuais.ipynb
+++ b/notebooks/01 - Fundamentos de Processamento de Imagens/03-Operacoes_Pontuais.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "setup-imports",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Diretório de trabalho atual: e:\\Personal Projects\\Mestrado\\ESTUDO CV\\Estudo em Python\\estudos_cv\\notebooks\n",
+      "Diretório de trabalho atual: e:\\Personal Projects\\Mestrado\\ESTUDO CV\\Estudo em Python\\estudos_cv\\notebooks\\01 - Fundamentos de Processamento de Imagens\n",
       "Raiz do projeto: e:\\Personal Projects\\Mestrado\\ESTUDO CV\\Estudo em Python\\estudos_cv\n",
       "✅ Biblioteca 'cv_lib.processamento' importada com sucesso!\n",
       "\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "brilho-contraste-demo",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dronc\\AppData\\Local\\Temp\\ipykernel_61740\\1235299474.py:37: UserWarning: Glyph 127899 (\\N{CONTROL KNOBS}) missing from font(s) DejaVu Sans.\n",
+      "C:\\Users\\dronc\\AppData\\Local\\Temp\\ipykernel_10404\\1235299474.py:37: UserWarning: Glyph 127899 (\\N{CONTROL KNOBS}) missing from font(s) DejaVu Sans.\n",
       "  plt.tight_layout()\n",
       "c:\\Users\\dronc\\anaconda3\\envs\\estudos_cv\\lib\\site-packages\\IPython\\core\\pylabtools.py:170: UserWarning: Glyph 127899 (\\N{CONTROL KNOBS}) missing from font(s) DejaVu Sans.\n",
       "  fig.canvas.print_figure(bytes_io, **kw)\n"
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "gama-demo",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dronc\\AppData\\Local\\Temp\\ipykernel_61740\\4215580291.py:36: UserWarning: Glyph 127754 (\\N{WATER WAVE}) missing from font(s) DejaVu Sans.\n",
+      "C:\\Users\\dronc\\AppData\\Local\\Temp\\ipykernel_10404\\4215580291.py:36: UserWarning: Glyph 127754 (\\N{WATER WAVE}) missing from font(s) DejaVu Sans.\n",
       "  plt.tight_layout()\n",
       "c:\\Users\\dronc\\anaconda3\\envs\\estudos_cv\\lib\\site-packages\\IPython\\core\\pylabtools.py:170: UserWarning: Glyph 127754 (\\N{WATER WAVE}) missing from font(s) DejaVu Sans.\n",
       "  fig.canvas.print_figure(bytes_io, **kw)\n"
